@@ -2,7 +2,7 @@
 # qwebview2.py <Peter.Bienstman@UGent.be>
 #
 
-from PyQt4 import QtWebKit
+from PyQt4 import QtWebKit, QtGui
 
 
 class QWebView2(QtWebKit.QWebView):
@@ -11,7 +11,13 @@ class QWebView2(QtWebKit.QWebView):
     so that the keyboard shortcuts still continue to work.
 
     """
-    
+
     def focusInEvent(self, event):
         self.parent().restore_focus()
         QtWebKit.QWebView.focusInEvent(self, event)
+
+    def contextMenuEvent(self, event):
+        menu = QtGui.QMenu(self)
+        menu.addAction(self.pageAction(QtWebKit.QWebPage.Copy))
+        menu.exec_(self.mapToGlobal(event.pos()))
+
